added text to describe the problem with HMR not working

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
   <app></app>
+  <p>HMR not working for now. Console says:</p>
+  <p>Cannot apply update. Need to do a full reload</p>
+  <p>Error: Aborted because 0 is not accepted</p>
+  <h3>How to fix this? Any suggestions?</h3>
   <script src="bundle.js"></script>
 </body>
 </html>
